Fixed width of search bar on mobile

--- a/styles.css
+++ b/styles.css
@@ -197,4 +197,8 @@ margin: 10px auto;
     justify-content: center;
     flex-direction: column;
 }
+
+#ip-bar{
+    width:40%;
+}
 }
